--- a/.github/workflows/release-plugin.yml
+++ b/.github/workflows/release-plugin.yml
@@ -25,7 +25,7 @@ jobs:
         id: release
         run: |
           # Get the release from ${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_NAME }}.php file, e.g. * Version: 4.0.0
-          RELEASE_NUMBER=$(grep -oP 'Version: \K[0-9]+\.[0-9]+\.[0-9]+' "${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_NAME }}.php")
+          RELEASE_NUMBER=$(grep -oP 'Version:\s+\K[0-9]+\.[0-9]+\.[0-9]+' "${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_NAME }}.php")
           if [ ! "${RELEASE_NUMBER}" ]; then
               echo "Error! Release number not found."
               exit 1
