--- a/.github/workflows/release-plugin.yml
+++ b/.github/workflows/release-plugin.yml
@@ -30,6 +30,7 @@ jobs:
               echo "Error! Release number not found."
               exit 1
           fi
+          echo "Release number: ${RELEASE_NUMBER}"
 
       # Zip up the plugin into a release PLUGIN_NAME
       - name: Zip up the plugin
@@ -42,5 +43,7 @@ jobs:
 
       # Create a release
       - name: Create a release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release create "${RELEASE_NUMBER}" "${{ env.PLUGIN_NAME }}_${RELEASE_NUMBER}.zip" -t "${RELEASE_NUMBER}" -n "Release ${RELEASE_NUMBER}"
